--- a/client/assets/all_Res.css
+++ b/client/assets/all_Res.css
@@ -13,10 +13,24 @@ div.bac-img{
     background-image: url("../mocks/restaurant-search-banner-2x.jpg");
 }
 div.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;width: 30%;height: 200px;margin-right: 30px;float: right;background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(149, 149, 149, 0.2), 0 6px 20px 0 rgba(131, 131, 131, 0.19);
+    width: 30%;
+    height: auto;
+    margin-right: 30px;
+    float: right;
+    background-color: white;
     margin-top: 20px;
     font-family:Shabnam,Arial,Tahoma,serif;
 }
 button.buy{
-    border: #d43f3a 1px solid;border-radius: 10px;padding: 5px 20px;background-color: rgba(212,63,58,0.1)
+    border: #d43f3a 1px solid;
+    border-radius: 20px;
+    padding: 5px 20px;
+    background-color: rgba(212,63,58,0.1);
+    color:#d43f3a;
+    opacity: 0.85;
+    transition: 0.1s;
+}
+button.buy:hover{
+    opacity: 1; color:#d43f3a;
 }
