--- a/client/assets/all_Res.css
+++ b/client/assets/all_Res.css
@@ -32,5 +32,8 @@ button.buy{
     transition: 0.1s;
 }
 button.buy:hover{
-    opacity: 1; color:#d43f3a;
+    opacity: 1;
+     color:#eee;
+     background-color: #d43f3a;
+     
 }
